--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "devDependencies": {
         "@babel/core": "^7.18.10",
         "@popperjs/core": "^2.10.2",
-        "axios": "^0.21",
+        "axios": "^0.21.4",
         "bootstrap": "^5.1.3",
         "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
@@ -25,6 +25,9 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
-        "vue-router": "^2.8.1"
+        "vue-persistedstate": "^1.2.5",
+        "vue-router": "^2.8.1",
+        "vue-toast-notification": "^0.6.3",
+        "vuex": "^2.5.0"
     }
 }
