--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "@johmun/vue-tags-input": "^2.1.0",
         "vue-persistedstate": "^1.2.5",
         "vue-router": "^2.8.1",
         "vue-toast-notification": "^0.6.3",
